--- a/lesson-30/charts/demo/templates/deployment.yaml
+++ b/lesson-30/charts/demo/templates/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "demo.fullname" . }}
   labels:
     {{- include "demo.labels" . | nindent 4 }}
+    app: demo
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
