--- a/lesson-30/charts/demo/templates/deployment.yaml
+++ b/lesson-30/charts/demo/templates/deployment.yaml
@@ -20,6 +20,7 @@ spec:
       {{- end }}
       labels:
         {{- include "demo.selectorLabels" . | nindent 8 }}
+        app: demo
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
