--- a/lesson-30/argocd-root/projects/dev-government-technologies/applications/myDemo.yaml
+++ b/lesson-30/argocd-root/projects/dev-government-technologies/applications/myDemo.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myDemoApp
+  name: my-demo-app
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
