--- a/lesson-30/helm-charts/myDemo/Chart.yaml
+++ b/lesson-30/helm-charts/myDemo/Chart.yaml
@@ -25,5 +25,5 @@ appVersion: "1.0.0"
 
 dependencies:
 - name: helm-template
-  version: 1.0.0
-  repository: https://github.com/nokiani/helm-template/blob/main
+  version: 0.1.0
+  repository: https://nokiani.github.io/charts
