--- a/lesson-30/helm-charts/myDemo/Chart.yaml
+++ b/lesson-30/helm-charts/myDemo/Chart.yaml
@@ -26,4 +26,4 @@ appVersion: "1.0.0"
 dependencies:
 - name: helm-template
   version: 0.1.0
-  repository: https://nokiani.github.io/charts
+  repository: https://nokiani.github.io
