--- a/lesson-30/helm-charts/myDemo/values-dev.yaml
+++ b/lesson-30/helm-charts/myDemo/values-dev.yaml
@@ -1,7 +1,7 @@
 global:
 
 helm-template:
-  nameOverride: "myDemo-service"
+  nameOverride: "my-demo-service"
   fullnameOverride: ""
 
   # Зависит от типов
